proof read chapter-3

--- a/sections/Analysis_Background.tex
+++ b/sections/Analysis_Background.tex
@@ -82,7 +82,7 @@ Figure \ref{fig:FakeFractionBaseline} shows the fractions of the additional base
         \caption{Fraction of non-prompt electrons and muons in the $Z+jets$ and $t\bar{t}$ control regions.\textcolor{red}{remake plots w/wo ATLAS label} \label{fig:FakeFractionBaseline}}
 \end{figure}
 
-The control regions have a unique non-prompt lepton composition as shown by figures \ref{fig:FakeCompositionCR2LElectron} and \ref{fig:FakeCompositionCR2LMuon}. More than $80\%$ of the non-prompt electrons in the $Z+jets$ CR originate from the light flavor decays, but about $60\%$ are from the light flavor decays in the $t\bar{t}$ CR. Similarly, about $80\%$ of the non-prompt muons in the $Z+jets$ CR originate from the heavy flavor, whereas more than $90\%$ are from the heavy-flavor decays in the $t\bar{t}$ CR. The non-prompt compositions of the signal region shown in figure \ref{fig:NonPromptLepSRDijet} are different from either control region. The two independent control regions are combined to form a single control region with a similar non-prompt lepton composition as the signal region.
+The control regions have a unique non-prompt lepton composition as shown by figures \ref{fig:FakeCompositionCR2LElectron} and \ref{fig:FakeCompositionCR2LMuon}. More than $80\%$ of the non-prompt electrons in the $Z+jets$ CR originate from the light flavor decays, but about $60\%$ are from the light flavor decays in the $t\bar{t}$ CR. Similarly, about $80\%$ of the non-prompt muons in the $Z+jets$ CR originate from the heavy flavor, whereas more than $90\%$ are from the heavy-flavor decays in the $t\bar{t}$ CR. The non-prompt compositions of the signal region shown in Figure \ref{fig:NonPromptLepSRDijet} are different from either control region. The two independent control regions are combined to form a single control region with a similar non-prompt lepton composition as the signal region.
 
 \begin{figure}[ht]
     \begin{subfigure}{.48\textwidth}
@@ -130,7 +130,7 @@ where $N$ is the total yield in the control region, $ f_{HF}$ is the ratio of th
 
 As the composition of non-prompt electrons and muons are different in different regions, the weights are evaluated separately for electrons and muons and evaluated as $w_{\mu} = 0.26$ and $w_{e} = 0.06$. Figure \ref{fig:NonPromptCombined} shows the composition of the non-prompt electrons and muons in the combined control region, which is formed by a weighted combination of the $Z+jets$ CR and the $t\bar{t}$ CR.
 
-Figure \ref{fig:ControlRegionsAdditionalBaselineElectronpT} shows the distributions of additional baseline electrons as a function of their $p_{T}~$ in the $Z+jets$ CR (left) and $t\bar{t}$ CR (right). The bottom distribution shows the same for the combined control region. For $Z+jets$ CR at low $p_{T}~$ region, additional baseline electrons are overestimated in MC by about $20\%$ showing the limited precision of the MC to estimate the non-prompt leptons. Similarly, figure \ref{fig:ControlRegionsAdditionalBaselineMuonpT} shows the distributions of additional baseline muons as a function of their $p_{T}~$ in the three control regions. In $Z+jets$ CR, additional muons mainly originate from $Z\rightarrow \ell \ell$ process in low $p_{T}~$ region, whereas at high $p_{T}~$ contribution from $t\bar{t}$ and WZ is more significant.
+Figure \ref{fig:ControlRegionsAdditionalBaselineElectronpT} shows the distributions of additional baseline electrons as a function of their $p_{T}~$ in the $Z+jets$ CR (left) and $t\bar{t}$ CR (right). The bottom distribution shows the same for the combined control region. For $Z+jets$ CR at low $p_{T}~$ region, additional baseline electrons are overestimated in MC by about $20\%$ showing the limited precision of the MC to estimate the non-prompt leptons. Similarly, Figure \ref{fig:ControlRegionsAdditionalBaselineMuonpT} shows the distributions of additional baseline muons as a function of their $p_{T}~$ in the three control regions. In $Z+jets$ CR, additional muons mainly originate from $Z\rightarrow \ell \ell$ process in low $p_{T}~$ region, whereas at high $p_{T}~$ contribution from $t\bar{t}$ and WZ is more significant.
 
 \begin{figure}[htb]
     \begin{subfigure}{.48\textwidth}
@@ -269,7 +269,7 @@ As discussed in Section \ref{subsec:OR}, the lepton-favored overlap removal used
     \caption{Fake efficiency of fake muons measured in the combined control region from data as a function of its $p_{T}~$, $\eta$, and $n_{jets}$. \textcolor{red}{remake plots w/wo ATLAS label and change color} \label{fig:FakeEff_1D_Muon}}
 \end{figure}
 
-The fake efficiency is parametrized in three-dimensional distributions of $p_{T}~$, $\eta$, and $n_{jets}$. Only two bins ($n_{jet}=0 ~\& ~ n_{jet} > 0$) are used for number of jets. The distributions in figure \ref{fig:ElecFakeEff} show the fake efficiency of an electron as a function of $p_{T}~ ~\&~ \eta$ for $n_{jet}=0 $ bin (left) and for $n_{jet}>0 $ bin (right). Similar distributions are shown in figure \ref{fig:MuonFakeEff} for muons.  
+The fake efficiency is parametrized in three-dimensional distributions of $p_{T}~$, $\eta$, and $n_{jets}$. Only two bins ($n_{jet}=0 ~\& ~ n_{jet} > 0$) are used for number of jets. The distributions in Figure \ref{fig:ElecFakeEff} show the fake efficiency of an electron as a function of $p_{T}~ ~\&~ \eta$ for $n_{jet}=0 $ bin (left) and for $n_{jet}>0 $ bin (right). Similar distributions are shown in Figure \ref{fig:MuonFakeEff} for muons.  
 
 \begin{figure}[htb]
         \begin{center}
@@ -379,7 +379,7 @@ The systematic gray bands in figures \ref{subfig:VRDFFF} and \ref{subfig:VRSCFF}
     \caption{ Yield as a function of $\mFourL$ in the different flavor (top) and same charge (bottom) validation regions. In both regions, the MC prediction matches more closely with data when the fake background events are estimated using the data-driven fake-factor method.\textcolor{red}{remake plots with ATLAS Label and cleaning other labels} \label{fig:VRDataMCYield}}
 \end{figure}
 
-The data and MC yield comparisons for several kinematic observables in VRDF (left) and VRSC (right) are shown by distributions in figure \ref{fig:AllDataMCYield}. The data and MC prediction are compatible in most bins within the systematic uncertainties for all the observables.
+The data and MC yield comparisons for several kinematic observables in VRDF (left) and VRSC (right) are shown by distributions in Figure \ref{fig:AllDataMCYield}. The data and MC prediction are compatible in most bins within the systematic uncertainties for all the observables.
 
 \begin{figure}[htb]
     \centering
@@ -428,7 +428,7 @@ The data and MC yield comparisons for several kinematic observables in VRDF (lef
 
 \subsubsection{Signal Region Estimation}
 \label{subsubsec:SREstimation}
-Similar to the validation regions, the background in the signal region is estimated by applying the fake factor to the not-signal quadruplets, as discussed in section \ref{subsubsec:EstimationStrategy}. Distributions in figure \ref{fig:MCFFRedComparison} compare the fake background predicted from MC and estimated from the fake-factor method in the VBS-Enhanced signal events as a function of $\mFourL$ (left) and $\ptFourL$ (right). Figure \ref{fig:MCFFRedStack} shows identical distributions but also includes the total SM prediction in the same region. The lower panel of the plot shows the fake background to the predicted signal ratio, which is small. The gray bands in the plots are from systematic uncertainties of the fake factor method, whose effect is negligible on the overall yield of the signal region.
+Similar to the validation regions, the background in the signal region is estimated by applying the fake factor to the not-signal quadruplets, as discussed in section \ref{subsubsec:EstimationStrategy}. Distributions in Figure \ref{fig:MCFFRedComparison} compare the fake background predicted from MC and estimated from the fake-factor method in the VBS-Enhanced signal events as a function of $\mFourL$ (left) and $\ptFourL$ (right). Figure \ref{fig:MCFFRedStack} shows identical distributions but also includes the total SM prediction in the same region. The lower panel of the plot shows the fake background to the predicted signal ratio, which is small. The gray bands in the plots are from systematic uncertainties of the fake factor method, whose effect is negligible on the overall yield of the signal region.
 
 \begin{figure}[htb]
     \centering
