--- a/sections/LHC.tex
+++ b/sections/LHC.tex
@@ -5,7 +5,7 @@ The LHC was approved in 1994 by the CERN Council and was designed to collide had
 
 The first run of the LHC, Run-1, started in $2010$ at a center-of-mass energy of $\sqrt{s} = 7$ TeV, which was later increased to $8$ TeV. Run-1 lasted until $2013$, after which LHC was shut down for two years of planned upgrades to enhance the accelerator and the detectors. LHC resumed its operation for Run-2 from $2015$ to $2018$ at the center-of-mass energy of $\sqrt{s} = 13$ TeV. The data collected during the Run-2 period is analyzed for this thesis. 
 
-Accelerating the proton to the desired high center-of-mass energy is a multi-step process shown schematically in figure \ref{fig:ProtonAcc}. First, the protons are created from hydrogen gas by removing the electrons through ionization with an intense electric field. A proton beam is then formed in LINAC 2 linear accelerator and injected into the circular PS Booster, which accelerates the $50$ MeV proton to energies of $1.4$ GeV \cite{LHCGuide}. The beams are then injected into the Proton Synchroton (PS), accelerating them to energies of $25$ GeV \cite{LHCGuide}. The proton beams are then injected into the Super Proton Synchroton (SPS) to further accelerate at $450$ GeV energies and injected into the main LHC rings. The two opposite proton beams reach the desired final energy of $6.5$ TeV using radio frequency (RF) acceleration cavities \cite{LHCGuide}. The accelerated proton beams are maintained for several hours of data-taking.
+Accelerating the proton to the desired high center-of-mass energy is a multi-step process shown schematically in Figure \ref{fig:ProtonAcc}. First, the protons are created from hydrogen gas by removing the electrons through ionization with an intense electric field. A proton beam is then formed in LINAC 2 linear accelerator and injected into the circular PS Booster, which accelerates the $50$ MeV proton to energies of $1.4$ GeV \cite{LHCGuide}. The beams are then injected into the Proton Synchroton (PS), accelerating them to energies of $25$ GeV \cite{LHCGuide}. The proton beams are then injected into the Super Proton Synchroton (SPS) to further accelerate at $450$ GeV energies and injected into the main LHC rings. The two opposite proton beams reach the desired final energy of $6.5$ TeV using radio frequency (RF) acceleration cavities \cite{LHCGuide}. The accelerated proton beams are maintained for several hours of data-taking.
 
 \begin{figure}
     \centering
