--- a/sections/Results_DetectorLevelMeasurements.tex
+++ b/sections/Results_DetectorLevelMeasurements.tex
@@ -1,7 +1,7 @@
 \section{ Detector Level Measurements }
 \label{sec:DetectorLevel_Measurement}
 
-Figure \ref{fig:reco_VBS_Enhanced_a} shows the measured detector level data and predicted detector level yield for six kinematic observables; the invariant mass of the dijet $[m_{jj}]$, invariant mass of the two $Z$ bosons $[m_{4\ell}]$, transverse momentum of the two tagging jets $[p_{T,jj}]$, transverse momentum of the two $Z$ bosons $[p_{T,4\ell}]$, transverse momentum of the two $Z$ bosons and two tagging jets $[p_{T,4\ell jj}]$, and scalar transverse momentum of the two $Z$ bosons and dijet $[s_{T,4\ell jj}]$. Similarly, figure \ref{fig:reco_VBS_Enhanced_b} shows the same for remaining kinematic observables, cosine of the decay angle of the negative lepton of the leading (sub-leading) pair in the pair's rest frame $[\cos \theta^{*}_{\ell 1 (3) \ell 2 (4)}]$, signed difference between the azimuthal angle of two jets $[\Delta \phi _{jj}^{signed}]$, rapidity difference between two jets $[\Delta y_{jj}]$, and centrality of the system $[\zeta]$.
+Figure \ref{fig:reco_VBS_Enhanced_a} shows the measured detector level data and predicted detector level yield for six kinematic observables; the invariant mass of the dijet $[m_{jj}]$, invariant mass of the two $Z$ bosons $[m_{4\ell}]$, transverse momentum of the two tagging jets $[p_{T,jj}]$, transverse momentum of the two $Z$ bosons $[p_{T,4\ell}]$, transverse momentum of the two $Z$ bosons and two tagging jets $[p_{T,4\ell jj}]$, and scalar transverse momentum of the two $Z$ bosons and dijet $[s_{T,4\ell jj}]$. Similarly, Figure \ref{fig:reco_VBS_Enhanced_b} shows the same for remaining kinematic observables, cosine of the decay angle of the negative lepton of the leading (sub-leading) pair in the pair's rest frame $[\cos \theta^{*}_{\ell 1 (3) \ell 2 (4)}]$, signed difference between the azimuthal angle of two jets $[\Delta \phi _{jj}^{signed}]$, rapidity difference between two jets $[\Delta y_{jj}]$, and centrality of the system $[\zeta]$.
 
 For each of these distributions, the measured data (black dot) is compared with state-of-the-art SM predictions, where the two QCD signal $qqZZjj$ (red) $\&$ $ggZZjj$ (blue), and the two MC predicted background, $VVV$ (yellow) and $ttV$ (purple) are taken from \textsc{Sherpa} predictions. The contribution from fake backgrounds in light pink is estimated using the data-driven method. The $qqZZjj$ electroweak signal is taken from the \textsc{PowhegV2} predictions, and the electroweak production of triboson and two jets ($VZZjj$) is taken from the \textsc{Sherpa} predictions. The vertical-solid black line on the data points represents the statistical uncertainty in the data, and the dashed black box in each bin represents the impact of the total theoretical and experimental uncertainties on the predicted detector-level yields. The impact of the total systematic uncertainties and the statistical precision each ranges from $15$ to $20\%$ depending on the bins and the distributions. 
 
