--- a/sections/theory_EWkProcess.tex
+++ b/sections/theory_EWkProcess.tex
@@ -1,7 +1,7 @@
 \section{ Electroweak Diboson Physics } 
 \label{sec:EWKPheno}
 
-In LHC, two types of physics processes, the QCD production at the order $\alpha_{S}^{\geq 2} \alpha_{EWK}^{4}$ and the EWK production at order $\alpha_{EWK}^{\geq6}$ contribute to the production of di-$Z$ bosons in an association of two jets $[ ZZ( \rightarrow 4\ell) jj ]$ \cite{CMSRun2ZZjj}. Figures \ref{fig:ZZjjFeynmanDiag_QCD_qq} and \ref{fig:ZZjjFeynmanDiag_QCD_gg} show the Feynman diagrams at leading order for parton-initiated and gluon loop-initiated QCD $ZZ( \rightarrow 4\ell) jj$ process, respectively, whereas figure \ref{fig:ZZjjFeynmanDiag_EWk} shows the Feynman diagrams at leading order for the EWK production of $ZZ( \rightarrow 4\ell) jj$ \cite{PowhegV2ZZjj}. The EWK production consists of two sets of interactions, first, the Vector Boson Scattering processes involving either triple (Figure \ref{fig:ZZjjFeynmanDiag_EWk_a}) or quartic (Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}) self-interactions of the gauge-bosons, and second the diagrams featuring the Higgs bosons (Figure \ref{fig:ZZjjFeynmanDiag_EWk_c} $\&$ \ref{fig:ZZjjFeynmanDiag_EWk_d}). The scattering amplitudes of the VBS processes involving longitudinally polarized vector bosons grow quadratically with the center of mass energy ($\sqrt{s}$), eventually violating the unitarity bounds. The precise SM interference between the Higgs-featured and VBS processes restores the unitarity \cite{VBSWWWW}.
+In LHC, two types of physics processes, the QCD production at the order $\alpha_{S}^{\geq 2} \alpha_{EWK}^{4}$ and the EWK production at order $\alpha_{EWK}^{\geq6}$ contribute to the production of di-$Z$ bosons in an association of two jets $[ ZZ( \rightarrow 4\ell) jj ]$ \cite{CMSRun2ZZjj}. Figures \ref{fig:ZZjjFeynmanDiag_QCD_qq} and \ref{fig:ZZjjFeynmanDiag_QCD_gg} show the Feynman diagrams at leading order for parton-initiated and gluon loop-initiated QCD $ZZ( \rightarrow 4\ell) jj$ process, respectively, whereas Figure \ref{fig:ZZjjFeynmanDiag_EWk} shows the Feynman diagrams at leading order for the EWK production of $ZZ( \rightarrow 4\ell) jj$ \cite{PowhegV2ZZjj}. The EWK production consists of two sets of interactions, first, the Vector Boson Scattering processes involving either triple (Figure \ref{fig:ZZjjFeynmanDiag_EWk_a}) or quartic (Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}) self-interactions of the gauge-bosons, and second the diagrams featuring the Higgs bosons (Figure \ref{fig:ZZjjFeynmanDiag_EWk_c} $\&$ \ref{fig:ZZjjFeynmanDiag_EWk_d}). The scattering amplitudes of the VBS processes involving longitudinally polarized vector bosons grow quadratically with the center of mass energy ($\sqrt{s}$), eventually violating the unitarity bounds. The precise SM interference between the Higgs-featured and VBS processes restores the unitarity \cite{VBSWWWW}.
 
 As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ bosons get their masses via the BEH mechanism through EWSB. As a consequence of EWSB, the $W$ and $Z$ bosons acquire an additional degree of freedom (the longitudinal polarization mode) whose scattering interfere with the Higgs-featured processes. Thus, measuring the cross-sections of electroweak production of the di-$Z$ bosons in association with two jets provides a direct probe of the EWSB, which is at the heart of the SM \cite{CMSRun2ZZjj}. As the unitarity is restored at high energies, the cross-section of the electroweak $ZZ( \rightarrow 4\ell) jj$ process is sensitive to possible BSM deviations at high energies. Therefore, measuring the cross-sections of the electroweak $ZZ( \rightarrow 4\ell) jj$ processes differentially as a function of kinematically sensitive observables is essential. 
 
