--- a/sections/theory_StandardModel.tex
+++ b/sections/theory_StandardModel.tex
@@ -1,7 +1,7 @@
 \section{The Standard Model}
 \label{sec:SM}
 
-The SM of particle physics is a mathematical framework based on quantum field theory, which incorporates quantum mechanics and special relativity. The SM describes all known fundamental particles in nature and their interactions. It consists of two sets of particles with intrinsic angular momentum, half-integer-spin fermions that are fundamental constituents of matter particles, and force-carrying integer-spin bosons. The seventeen fundamental particles of the SM and their properties, such as mass, charge, and intrinsic spin, are shown schematically by figure \ref{fig:SM}. Two textbooks on particle physics, Mark Thomson's Modern Particle Physics \cite{Thomson:2013zua}, and Halzen $\&$ Martin's Quarks $\&$ Leptons \cite{Halzen:1984mc} guide the discussion written in this section.
+The SM of particle physics is a mathematical framework based on quantum field theory, which incorporates quantum mechanics and special relativity. The SM describes all known fundamental particles in nature and their interactions. It consists of two sets of particles with intrinsic angular momentum, half-integer-spin fermions that are fundamental constituents of matter particles, and force-carrying integer-spin bosons. The seventeen fundamental particles of the SM and their properties, such as mass, charge, and intrinsic spin, are shown schematically by Figure \ref{fig:SM}. Two textbooks on particle physics, Mark Thomson's Modern Particle Physics \cite{Thomson:2013zua}, and Halzen $\&$ Martin's Quarks $\&$ Leptons \cite{Halzen:1984mc} guide the discussion written in this section.
 
 \subsection{Symmetries}
 \label{subsec:Symmetries}
@@ -259,7 +259,7 @@ Weak interactions describe the interactions mediated by massive gauge bosons, fo
 
 During the 1960s, Glashow, Salam, and Weinberg (GWS) worked independently and made different contributions to formulate a theoretical model of weak interactions following a local gauge invariance of $SU(2)_{L}~\otimes~U(1)_{Y}$ \cite{GLASHOW1961579}\cite{EWK_W}\cite{EWK_S}. The theory postulates the existence of four massless gauge bosons, two electrically-charged and two electrically-neutral, which mediate unified electromagnetic and weak interactions. However, the observed short range of weak force could only be explained with massive gauge bosons of electroweak interactions. Therefore, implying the underlying symmetry of weak interactions is broken by some mechanism, which was later understood through the Higgs Mechanism discussed in Section \ref{subsubsec:HiggsMech}. 
 
-Experimental observations suggest weak interactions violate parity by only affecting the left-handed fermion and right-handed anti-fermion fields. Thus, the unified electroweak theory is described by $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge interactions. Similar to the electric charge $Q$ conserved in QED by $U(1)$ symmetry, the weak hypercharge ($Y=2(Q-I_{3})$) related to the electric charge and the weak isospin $(I_{3})$ is conserved by the $U(1)_{Y}$ symmetry. The fermion fields are represented by the left-handed doublets $\chi_{L}$ and the right-handed singlets $\psi_{R}$, introduced in table \ref{tab:Fermions}. The doublet and singlet field for the first generation of leptons and quarks are, 
+Experimental observations suggest weak interactions violate parity by only affecting the left-handed fermion and right-handed anti-fermion fields. Thus, the unified electroweak theory is described by $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge interactions. Similar to the electric charge $Q$ conserved in QED by $U(1)$ symmetry, the weak hypercharge ($Y=2(Q-I_{3})$) related to the electric charge and the weak isospin $(I_{3})$ is conserved by the $U(1)_{Y}$ symmetry. The fermion fields are represented by the left-handed doublets $\chi_{L}$ and the right-handed singlets $\psi_{R}$, introduced in Table \ref{tab:Fermions}. The doublet and singlet field for the first generation of leptons and quarks are, 
 
 \begin{center}
 $ \chi_{L} = \begin{pmatrix} \nu_{e} \\ e\end{pmatrix}_{L}$ \hspace{5pt} $\&$ \hspace{5pt} $ \chi_{L} = \begin{pmatrix}  u \\ d \end{pmatrix}_{L}$ \\
