--- a/sections/AnalysisOverview.tex
+++ b/sections/AnalysisOverview.tex
@@ -4,5 +4,4 @@
 \section{Goals}
 \label{sec:Analysis_Goals}
 
-The primary goal of the analysis is to measure the differential cross-sections of the kinematic observables sensitive to the EWK $ZZjj \rightarrow 4\ell jj$ production mode. The differential cross-sections measured in VBS-enhanced phase space are used in the precision study of the SM $4\ell jj$ production and constrain the effects of BSM physics. For simpler re-interpretation in the future without ATLAS detector simulations, the differential cross-sections are measured at a particle level using an unfolding technique, which corrects the detector effects. The details of the unfolding to extrapolate the particle-level yield from detector-level yield will be discussed in Section \ref{sec:Unfolding}. The unfolded cross-sections shown in Section \ref{sec:DifferentialxS} are then used to constrain the effect of BSM in a model-independent framework using the Effective Field Theory (EFT) approach, which will be discussed in Section \ref{sec:EFT}. 
-  
+The primary goal of the analysis is to measure the differential cross-sections of the kinematic observables sensitive to the EWK $ZZ ( \rightarrow 4\ell) jj$ production mode. The differential cross-sections measured in the VBS-enhanced phase space are used in the precision study of the SM $ZZ ( \rightarrow 4\ell) jj$ process and to constrain the effects of BSM physics. For simpler re-interpretation in the future without ATLAS detector simulations, the differential cross-sections are measured at a particle level using an unfolding technique, which corrects the detector effects.
