--- a/sections/Analysis_Obs.tex
+++ b/sections/Analysis_Obs.tex
@@ -23,8 +23,8 @@ The primary results of the thesis are differential cross-sections of the followi
 }
 \item{ $\Delta y_{jj}$: the absolute value of rapidity difference between the leading and the sub-leading jets in the dijet}
 \item{ $\zeta$: centrality of the system}
-\item{ $\cos \theta^{*}_{\ell 1 \ell 2}$: cosine of the decay angle of the negative lepton of the leading pair in the pair's rest frame as shown by figure \ref{fig:costhetaFrameOfRef}}
-\item{ $\cos \theta^{*}_{\ell 3 \ell 4}$: cosine of the decay angle of the negative lepton of the sub-leading pair in the pair's rest frame as shown by figure \ref{fig:costhetaFrameOfRef} }
+\item{ $\cos \theta^{*}_{\ell 1 \ell 2}$: cosine of the decay angle of the negative lepton of the leading pair in the pair's rest frame as shown by Figure \ref{fig:costhetaFrameOfRef}}
+\item{ $\cos \theta^{*}_{\ell 3 \ell 4}$: cosine of the decay angle of the negative lepton of the sub-leading pair in the pair's rest frame as shown by Figure \ref{fig:costhetaFrameOfRef} }
 
 \end{itemize}
 
